# WinUHid

./: AGENTS.md  BUILDING.md  CONTRIBUTING.md  Justfile  README.md
.github/workflows/: build.yml
Installer/: README.md
WinUHid/: README.md
WinUHid Driver/: README.md
WinUHidDevs/: README.md  WinUHidPS5.cpp  WinUHidPS5.h
WinUHidUnitTests/: PS5.cpp  README.md
scripts/: README.md  install-driver.ps1  invoke-vs-tool.ps1  uninstall-driver.ps1
web/: Cargo.toml  README.md
web/frontend/: app.js  index.html  style.css
web/src/: ffi.rs  main.rs  manager.rs  server.rs
